# Chattere

./: CMakeLists.txt  conanfile.txt
Actions/: CMakeLists.txt
Actions/include/: actions.hpp
Client/: CMakeLists.txt
Client/src/: main.cpp
Database/: CMakeLists.txt
Database/include/: database.hpp
Database/src/: database.cpp
Docker/: Server.Dockerfile
Emoji/: CMakeLists.txt
Emoji/include/: emoji.hpp
Emoji/src/: emoji.cpp
Events/: CMakeLists.txt
Events/include/: events.hpp
Net/: CMakeLists.txt
Net/include/: client_socket.hpp  inet_socket_address.hpp  net.hpp  server_socket.hpp  socket.hpp
Net/src/: client_socket.cpp  inet_socket_address.cpp  net.cpp  server_socket.cpp  socket.cpp
PluginExamples/Example/: plugin.lua
PluginManager/: CMakeLists.txt
PluginManager/include/: plugin-manager.hpp
PluginManager/src/: plugin-manager.cpp
Plugins/: CMakeLists.txt
Plugins/include/: lua_yaml.hpp  plugins.hpp
Plugins/src/: lua_yaml.cpp  plugins.cpp
Protocol/: CMakeLists.txt
Protocol/include/: packet.hpp
Protocol/proto/: database.proto  packet.proto
Protocol/src/: packet.cpp
Server/: CMakeLists.txt
Server/include/: channel.hpp  command.hpp  command_sender.hpp  console_command_sender.hpp  events.hpp  handlers.hpp  permissible.hpp  server.hpp  server_events.hpp  user.hpp  user_command_sender.hpp
Server/src/: basic_commands.hpp  command_sender.cpp  console_command_sender.cpp  main.cpp  server.cpp  user.cpp  user_command_sender.cpp
Server/src/events/: events.cpp  events.hpp  on_user_message.hpp  server_events.cpp
Snowflakes/: CMakeLists.txt
Snowflakes/include/: snowflake.hpp
Snowflakes/src/: snowflake.cpp
scripts/: lua_make.patch
